# blox1.2

./: .env.example  .gitignore  MULTITENANT_MIGRATION.md  SETUP.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
crew-service/: .env.example  .gitignore  README.md  nixpacks.toml  pyproject.toml
crew-service/app/: agents.py  main.py  runtime.py
crew-service/app/tools/: __init__.py  email.py
src/: middleware.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/(dashboard)/: layout.tsx
src/app/(dashboard)/activity/: page.tsx
src/app/(dashboard)/agents/: page.tsx
src/app/(dashboard)/dashboard/: page.tsx
src/app/(dashboard)/data/: page.tsx
src/app/(dashboard)/keys/: page.tsx
src/app/(dashboard)/plans/: page.tsx
src/app/api/sms/: route.ts
src/app/app/: page.tsx  route.ts
src/app/billing/: page.tsx
src/app/login/: page.tsx
src/app/onboarding/: page.tsx
src/app/pricing/: page.tsx
src/app/security/: page.tsx
src/app/signin/: page.tsx
src/app/status/: page.tsx
src/app/tenants/: page.tsx
src/components/: AgentDashboard.tsx  BloxHome.tsx  ConditionalAdminShell.tsx  CrewTestPanel.tsx  Layout.tsx
src/components/admin/: AdminShell.tsx
src/components/ui/: button.tsx
src/lib/: api-middleware.ts  blox.ts  secrets.ts  supabase-admin.ts  supabase-browser.ts  supabase-server.ts  supabase.ts  tenant.ts
supabase/migrations/: 000_diagnostic.sql  000_pre_patch.sql  001_create_tool_invocations.sql  001_multitenant_schema.sql  002_fix_rls_policies.sql  003_fix_tenant_select_policy.sql  004_tool_usage_logs.sql
(+32 files in other folders)
