[tool.poetry]
name = "blox-crew-service"
version = "0.1.0"
description = "CrewAI microservice for BLOX multi-agent coordination"
authors = ["BLOX Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
crewai = "^0.1.0"
openai = "^1.3.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.0"
requests = "^2.31.0"
langchain = "^0.2.0"
langchain-core = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
